# stock-trader

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-rl.txt  requirements.txt
.github/workflows/: ci.yml
agents/llm/: debate.py  fundamental_analyst.py  momentum_analyst.py  news_analyst.py  researcher.py  sector_analyst.py  technical_analyst.py  trader.py  volatility_analyst.py
agents/python/: backtest.py  benchmark.py  broker_model.py  circuit_breaker.py  consensus.py  correlation.py  correlation_sizing.py  daily_digest.py  daily_report.py  (+31 more)
config/: settings.py
core/: llm_client.py  logging.py  notifier.py  orchestrator.py  parser.py  resilience.py  smart_picker.py  state.py
dashboard/: auth.py  server.py
data/: auto_tuner.json
docs/: backtest_regime_filter.md
tests/: conftest.py  test_broker_model.py  test_circuit_breaker.py  test_consensus.py  test_correlation_sizing.py  test_daily_digest.py  test_ensemble_weights.py  test_explainer.py  test_forecaster_vote.py  test_indicators.py  test_market_regime.py  test_metrics.py  test_monte_carlo.py  test_notifier.py  test_paper_broker.py  test_parser.py  test_patterns.py  test_regime.py  test_relative_strength.py  test_resilience.py  test_risk_validator.py  test_rl_agent.py  test_rl_compare.py  test_rl_env.py  test_rl_features.py  test_rl_trainer.py  test_rl_walk_forward.py  test_self_tuner.py  test_smart_picker.py  test_state.py  test_strategies.py  test_volume_profile.py  test_voter_stats.py
(+11 files in other folders)
