[project]
name = "stock-trader"
version = "0.1.0"
description = "Multi-agent AI stock trading system with local LLM and paper broker"
authors = [{ name = "Olga Martynyuk" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".venv", "data", "dashboard/static"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "E402"]
"**/__init__.py" = ["F401"]
"main.py" = ["E402"]
"dashboard/server.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [".venv", "tests", "data"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
pythonpath = ["."]
